changed it to VehicleTypeEntities

--- a/Garage3.0/Garage3.0.Web/Views/VehicleTypeEntities/Create.cshtml
+++ b/Garage3.0/Garage3.0.Web/Views/VehicleTypeEntities/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model Garage3._0.Web.Models.Entities.VehicleEntities
+﻿@model Garage3._0.Web.Models.Entities.VehicleTypeEntities
 
 @{
     ViewData["Title"] = "Create";
@@ -6,7 +6,7 @@
 
 <h1>Create</h1>
 
-<h4>VehicleEntities</h4>
+<h4>VehicleTypeEntities</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
