--- a/Garage3.0/Garage3.0.Web/Views/VehicleTypeEntities/Index.cshtml
+++ b/Garage3.0/Garage3.0.Web/Views/VehicleTypeEntities/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Garage3._0.Web.Models.Entities.VehicleEntities>
+﻿@model IEnumerable<Garage3._0.Web.Models.Entities.VehicleTypeEntities>
 
 @{
     ViewData["Title"] = "Index";
