--- a/Garage3.0/Garage3.0.Web/Views/VehicleTypeEntities/Details.cshtml
+++ b/Garage3.0/Garage3.0.Web/Views/VehicleTypeEntities/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model Garage3._0.Web.Models.Entities.VehicleEntities
+﻿@model Garage3._0.Web.Models.Entities.VehicleTypeEntities
 
 @{
     ViewData["Title"] = "Details";
@@ -7,7 +7,7 @@
 <h1>Details</h1>
 
 <div>
-    <h4>VehicleEntities</h4>
+    <h4>VehicleTypeEntities</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
