Member controller added Member views added Fix in Home/Index (not important)

--- a/Garage3.0/Garage3.0.Web/Views/Home/Index.cshtml
+++ b/Garage3.0/Garage3.0.Web/Views/Home/Index.cshtml
@@ -1,8 +1,40 @@
 ﻿@{
-    ViewData["Title"] = "Garage Home Page";
+	ViewData["Title"] = "Garage Home Page";
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+	<h1 class="display-4">Welcome</h1>
+	<p>Choose your action</p>
+</div>
+<div class="row">
+	<div class="col-md-4">
+		<div class="card" style="width: 18rem;">
+			<img src="..." class="card-img-top" alt="...">
+			<div class="card-body">
+				<h5 class="card-title">Park</h5>
+				<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+				<a href="#" class="btn btn-primary">Go to parking</a>
+			</div>
+		</div>
+	</div>
+	<div class="col-md-4">
+		<div class="card" style="width: 18rem;">
+			<img src="..." class="card-img-top" alt="...">
+			<div class="card-body">
+				<h5 class="card-title">Register new member</h5>
+				<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+				<a href="https://localhost:7253/Member/Create" class="btn btn-primary">Go to member registration</a>
+			</div>
+		</div>
+	</div>
+	<div class="col-md-4">
+		<div class="card" style="width: 18rem;">
+			<img src="..." class="card-img-top" alt="...">
+			<div class="card-body">
+				<h5 class="card-title">Register new vehicle</h5>
+				<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+				<a href="#" class="btn btn-primary">Go to vehicle registration</a>
+			</div>
+		</div>
+	</div>
 </div>
