changed the name from "vehicletypeentities" to "vehicletype"

--- a/Garage3.0/Garage3.0.Web/Views/VehicleType/Index.cshtml
+++ b/Garage3.0/Garage3.0.Web/Views/VehicleType/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Garage3._0.Web.Models.Entities.VehicleTypeEntities>
+﻿@model IEnumerable<Garage3._0.Web.Models.Entities.VehicleType>
 
 @{
     ViewData["Title"] = "Index";
