--- a/Garage3.0/Garage3.0.Web/Views/VehicleType/Delete.cshtml
+++ b/Garage3.0/Garage3.0.Web/Views/VehicleType/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model Garage3._0.Web.Models.Entities.VehicleTypeEntities
+﻿@model Garage3._0.Web.Models.Entities.VehicleType
 
 @{
     ViewData["Title"] = "Delete";
@@ -8,7 +8,7 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>VehicleTypeEntities</h4>
+    <h4>VehicleType</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
