--- a/Garage3.0/Garage3.0.Web/Views/VehicleType/Edit.cshtml
+++ b/Garage3.0/Garage3.0.Web/Views/VehicleType/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model Garage3._0.Web.Models.Entities.VehicleTypeEntities
+﻿@model Garage3._0.Web.Models.Entities.VehicleType
 
 @{
     ViewData["Title"] = "Edit";
@@ -6,7 +6,7 @@
 
 <h1>Edit</h1>
 
-<h4>VehicleTypeEntities</h4>
+<h4>VehicleType</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
