Home Index link to member registration

--- a/Garage3.0/Garage3.0.Web/Views/Home/Index.cshtml
+++ b/Garage3.0/Garage3.0.Web/Views/Home/Index.cshtml
@@ -23,7 +23,7 @@
 			<div class="card-body">
 				<h5 class="card-title">Register new member</h5>
 				<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-				<a href="https://localhost:7253/Member/Create" class="btn btn-primary">Go to member registration</a>
+				<a href="/Member/Create" class="btn btn-primary">Go to member registration</a>
 			</div>
 		</div>
 	</div>
