--- a/Garage3.0/Garage3.0.Web/Views/VehicleType/Details.cshtml
+++ b/Garage3.0/Garage3.0.Web/Views/VehicleType/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model Garage3._0.Web.Models.Entities.VehicleType
+﻿@model Garage3._0.Web.Models.Entities.VehicleTypeEntity
 
 @{
     ViewData["Title"] = "Details";
@@ -11,10 +11,10 @@
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.VehicleTypes)
+            @Html.DisplayNameFor(model => model.Title)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.VehicleTypes)
+            @Html.DisplayFor(model => model.Title)
         </dd>
     </dl>
 </div>
