--- a/Garage3.0/Garage3.0.Web/Views/VehicleType/Edit.cshtml
+++ b/Garage3.0/Garage3.0.Web/Views/VehicleType/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model Garage3._0.Web.Models.Entities.VehicleType
+﻿@model Garage3._0.Web.Models.Entities.VehicleTypeEntity
 
 @{
     ViewData["Title"] = "Edit";
@@ -14,9 +14,9 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
-                <label asp-for="VehicleTypes" class="control-label"></label>
-                <input asp-for="VehicleTypes" class="form-control" />
-                <span asp-validation-for="VehicleTypes" class="text-danger"></span>
+                <label asp-for="Title" class="control-label"></label>
+                <input asp-for="Title" class="form-control" />
+                <span asp-validation-for="Title" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
