--- a/Garage3.0/Garage3.0.Web/Views/VehicleType/Index.cshtml
+++ b/Garage3.0/Garage3.0.Web/Views/VehicleType/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Garage3._0.Web.Models.Entities.VehicleType>
+﻿@model IEnumerable<Garage3._0.Web.Models.Entities.VehicleTypeEntity>
 
 @{
     ViewData["Title"] = "Index";
@@ -13,7 +13,7 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.VehicleTypes)
+                @Html.DisplayNameFor(model => model.Title)
             </th>
             <th></th>
         </tr>
@@ -22,7 +22,7 @@
 @foreach (var item in Model) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.VehicleTypes)
+                @Html.DisplayFor(modelItem => item.Title)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
