--- a/Garage3.0/Garage3.0.Web/Views/Shared/_Layout.cshtml
+++ b/Garage3.0/Garage3.0.Web/Views/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Vehicles" asp-action="Index">Vehicle</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Member" asp-action="Create">Register</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Members" asp-action="Create">Register member</a>
                         </li>
                     </ul>
                 </div>
