--- a/Garage3.0/Garage3.0.Web/Views/Members/Create.cshtml
+++ b/Garage3.0/Garage3.0.Web/Views/Members/Create.cshtml
@@ -1,12 +1,12 @@
 ﻿@model Garage3._0.Web.Models.Entities.MemberEntity
 
 @{
-    ViewData["Title"] = "Register";
+    ViewData["Title"] = "Register member";
 }
 
-<h1>Create</h1>
+<h1>Register member</h1>
 
-<h4>MemberEntity</h4>
+<h4>Register to park in the garage.</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -28,14 +28,14 @@
                 <span asp-validation-for="Email" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Register" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-controller="Home" asp-action="Index">Home</a>
 </div>
 
 @section Scripts {
