--- a/Garage3.0/Garage3.0.Web/Views/Members/Create.cshtml
+++ b/Garage3.0/Garage3.0.Web/Views/Members/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model Garage3._0.Web.Models.Entities.MemberEntity
+﻿@model Garage3._0.Web.Models.ViewModels.MemberRegistrationViewModel
 
 @{
     ViewData["Title"] = "Register member";
