--- a/Garage3.0/Garage3.0.Web/Views/Vehicles/Create.cshtml
+++ b/Garage3.0/Garage3.0.Web/Views/Vehicles/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model Garage3._0.Web.Models.Entities.VehicleEntity
+﻿@model Garage3._0.Web.Models.ViewModels.VehicleRegistrationViewModel
 
 @{
     ViewData["Title"] = "Register vehicle";
