--- a/Garage3.0/Garage3.0.Web/Views/Home/Index.cshtml
+++ b/Garage3.0/Garage3.0.Web/Views/Home/Index.cshtml
@@ -3,14 +3,14 @@
 }
 
 <div id="welcome" class="text-center">
-	<h1 class="display-4">Welcome</h1>
+	<h1 class="display-4">Welcome to Garage 3.0</h1>
 	<p >Choose your action</p>
 </div>
 <div class="row">
 	<div class="col-md-4">
 		<div class="card">
 			<div class="card-header">
-				Featured
+				Park
 			</div>
 			<div class="card-body">
 				<h5 class="card-title">Park</h5>
@@ -22,7 +22,7 @@
 	<div class="col-md-4">
 		<div class="card">
 			<div class="card-header">
-				Featured
+				New Member
 			</div>
 			<div class="card-body">
 				<h5 class="card-title">Register new member</h5>
@@ -35,7 +35,7 @@
 	<div class="col-md-4">
 		<div class="card">
 			<div class="card-header">
-				Featured
+				New Vehicle
 			</div>
 			<div class="card-body">
 				<h5 class="card-title">Register new vehicle</h5>
