--- a/Garage3.0/Garage3.0.Web/Views/Shared/_Layout.cshtml
+++ b/Garage3.0/Garage3.0.Web/Views/Shared/_Layout.cshtml
@@ -25,9 +25,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Vehicles" asp-action="Index">Vehicle</a>
                         </li>
-                        <li class="nav-item">
+                        @*<li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Members" asp-action="Create">Register member</a>
-                        </li>
+                        </li>*@
                     </ul>
                 </div>
             </div>
