--- a/Garage3.0/Garage3.0.Web/Views/Vehicles/Index.cshtml
+++ b/Garage3.0/Garage3.0.Web/Views/Vehicles/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Garage3._0.Web.Models.Entities.VehicleEntity>
+﻿@model IEnumerable<VehicleIndexViewModel>
 
 @{
     ViewData["Title"] = "Index";
@@ -13,6 +13,12 @@
     <thead>
         <tr>
             <th>
+                @Html.DisplayNameFor(model => model.MemberName)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.VehicleTypeTitle)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.RegNo)
             </th>
             <th>
@@ -20,12 +26,6 @@
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Model)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.VehicleType)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Member)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Color)
@@ -37,6 +37,12 @@
 @foreach (var item in Model) {
         <tr>
             <td>
+                @Html.DisplayFor(modelItem => item.MemberName)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.VehicleTypeTitle)
+            </td>
+            <td>
                 @Html.DisplayFor(modelItem => item.RegNo)
             </td>
             <td>
@@ -44,12 +50,6 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Model)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.VehicleType)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Member)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Color)
