--- a/Garage3.0/Garage3.0.Web/Views/_ViewImports.cshtml
+++ b/Garage3.0/Garage3.0.Web/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using Garage3._0.Web
 @using Garage3._0.Web.Models
+@using Garage3._0.Web.Models.Entities
+@using Garage3._0.Web.Models.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
