--- a/Garage3.0/Garage3.0.Web/Views/VehicleType/Create.cshtml
+++ b/Garage3.0/Garage3.0.Web/Views/VehicleType/Create.cshtml
@@ -18,6 +18,11 @@
                 <span asp-validation-for="Title" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <labal asp-for="Wheels" class="control-label"></labal>
+                <input asp-for="Wheels" class="form-control" />
+                <span asp-validation-for="Wheels" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
