--- a/Garage3.0/Garage3.0.Web/Views/VehicleType/Index.cshtml
+++ b/Garage3.0/Garage3.0.Web/Views/VehicleType/Index.cshtml
@@ -15,7 +15,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.Title)
             </th>
-            <th></th>
+            <th>
+                @Html.DisplayNameFor(model => model.Wheels)
+            </th>
         </tr>
     </thead>
     <tbody>
@@ -23,6 +25,9 @@
         <tr>
             <td>
                 @Html.DisplayFor(modelItem => item.Title)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Wheels)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
