Ändrat namn på view model Funktion i Controller - funkar inte

--- a/Garage3.0/Garage3.0.Web/Views/Members/Index.cshtml
+++ b/Garage3.0/Garage3.0.Web/Views/Members/Index.cshtml
@@ -1,47 +1,62 @@
 ﻿@model IEnumerable<Garage3._0.Web.Models.Entities.MemberEntity>
 
 @{
-    ViewData["Title"] = "Index";
+	ViewData["Title"] = "Member list";
 }
 
-<h1>Index</h1>
+<h1>Member list</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+	<a asp-action="Create">Register new member</a>
 </p>
+
+<div class="card text-center">
+	<div class="card-header">
+		Member Name
+	</div>
+	<div class="card-body">
+		<h5 class="card-title">Special title treatment</h5>
+		<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+		<a href="#" class="btn btn-primary">Go somewhere</a>
+	</div>
+	<div class="card-footer text-muted">
+		2 days ago
+	</div>
+</div>
 <table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Name)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.PersonNr)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Email)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.PersonNr)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Email)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
-        </tr>
-}
-    </tbody>
+	<thead>
+		<tr>
+			<th>
+				@Html.DisplayNameFor(model => model.Name)
+			</th>
+			<th>
+				@Html.DisplayNameFor(model => model.PersonNr)
+			</th>
+			<th>
+				@Html.DisplayNameFor(model => model.Email)
+			</th>
+			<th></th>
+		</tr>
+	</thead>
+	<tbody>
+		@foreach (var item in Model)
+		{
+			<tr>
+				<td>
+					@Html.DisplayFor(modelItem => item.Name)
+				</td>
+				<td>
+					@Html.DisplayFor(modelItem => item.PersonNr)
+				</td>
+				<td>
+					@Html.DisplayFor(modelItem => item.Email)
+				</td>
+				<td>
+					<a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+					<a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+					<a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+				</td>
+			</tr>
+		}
+	</tbody>
 </table>
