--- a/Garage3.0/Garage3.0.Web/Views/Members/Details.cshtml
+++ b/Garage3.0/Garage3.0.Web/Views/Members/Details.cshtml
@@ -7,7 +7,7 @@
 <h1>Details</h1>
 
 <div>
-    <h4>MemberEntity</h4>
+    <h4>Member details</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -32,5 +32,5 @@
 </div>
 <div>
     <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">To member list</a>
 </div>
