--- a/Garage3.0/Garage3.0.Web/Views/Members/Index.cshtml
+++ b/Garage3.0/Garage3.0.Web/Views/Members/Index.cshtml
@@ -15,7 +15,7 @@
 		Member Name
 	</div>
 	<div class="card-body">
-		<h5 class="card-title">Special title treatment</h5>
+		<h5 class="card-title">This is a test</h5>
 		<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
 		<a href="#" class="btn btn-primary">Go somewhere</a>
 	</div>
