--- a/Garage3.0/Garage3.0.Web/Views/Vehicles/Create.cshtml
+++ b/Garage3.0/Garage3.0.Web/Views/Vehicles/Create.cshtml
@@ -28,14 +28,14 @@
                 <span asp-validation-for="Model" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="VehicleTypeEntity" class="control-label"></label>
-                <input asp-for="VehicleTypeEntity" class="form-control" />
-                <span asp-validation-for="VehicleTypeEntity" class="text-danger"></span>
+                <label asp-for="VehicleType" class="control-label"></label>
+                <input asp-for="VehicleType" class="form-control" />
+                <span asp-validation-for="VehicleType" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="MemberEntity" class="control-label"></label>
-                <input asp-for="MemberEntity" class="form-control" />
-                <span asp-validation-for="MemberEntity" class="text-danger"></span>
+                <label asp-for="Member" class="control-label"></label>
+                <input asp-for="Member" class="form-control" />
+                <span asp-validation-for="Member" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Color" class="control-label"></label>
