--- a/Garage3.0/Garage3.0.Web/Views/Vehicles/Details.cshtml
+++ b/Garage3.0/Garage3.0.Web/Views/Vehicles/Details.cshtml
@@ -29,13 +29,13 @@
             @Html.DisplayFor(model => model.Model)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.VehicleTypeEntity)
+            @Html.DisplayNameFor(model => model.VehicleType)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.VehicleTypeEntity)
+            @Html.DisplayFor(model => model.VehicleType)
         </dd>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.MemberEntity)
+            @Html.DisplayFor(model => model.Member)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Color)
