--- a/Garage3.0/Garage3.0.Web/Views/Members/Index.cshtml
+++ b/Garage3.0/Garage3.0.Web/Views/Members/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Garage3._0.Web.Models.Entities.MemberEntity>
+﻿@model IEnumerable<Garage3._0.Web.Models.ViewModels.MemberIndexViewModel>
 
 @{
 	ViewData["Title"] = "Member list";
@@ -29,9 +29,9 @@
 			<th>
 				@Html.DisplayNameFor(model => model.Name)
 			</th>
-			<th>
+			@*<th>
 				@Html.DisplayNameFor(model => model.PersonNr)
-			</th>
+			</th>*@
 			<th>
 				@Html.DisplayNameFor(model => model.Email)
 			</th>
@@ -45,9 +45,9 @@
 				<td>
 					@Html.DisplayFor(modelItem => item.Name)
 				</td>
-				<td>
+				@*<td>
 					@Html.DisplayFor(modelItem => item.PersonNr)
-				</td>
+				</td>*@
 				<td>
 					@Html.DisplayFor(modelItem => item.Email)
 				</td>
