ParkingSpot Renaming And Migration

--- a/Garage3.0/Garage3.0.Web/Views/ParkingSpots/Details.cshtml
+++ b/Garage3.0/Garage3.0.Web/Views/ParkingSpots/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model Garage3._0.Web.Models.Entities.ParkingSpot
+﻿@model Garage3._0.Web.Models.Entities.ParkingSpotEntity
 
 @{
     ViewData["Title"] = "Details";
@@ -16,12 +16,12 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.SpotNumber)
         </dd>
-        <dt class = "col-sm-2">
+        @*<dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.IsAvailable)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.IsAvailable)
-        </dd>
+        </dd>*@
     </dl>
 </div>
 <div>
