--- a/Garage3.0/Garage3.0.Web/Views/ParkingSpots/Create.cshtml
+++ b/Garage3.0/Garage3.0.Web/Views/ParkingSpots/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model Garage3._0.Web.Models.Entities.ParkingSpot
+﻿@model Garage3._0.Web.Models.Entities.ParkingSpotEntity
 
 @{
     ViewData["Title"] = "Create";
@@ -17,11 +17,11 @@
                 <input asp-for="SpotNumber" class="form-control" />
                 <span asp-validation-for="SpotNumber" class="text-danger"></span>
             </div>
-            <div class="form-group form-check">
+            @*<div class="form-group form-check">
                 <label class="form-check-label">
                     <input class="form-check-input" asp-for="IsAvailable" /> @Html.DisplayNameFor(model => model.IsAvailable)
                 </label>
-            </div>
+            </div>*@
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
