--- a/Garage3.0/Garage3.0.Web/Views/ParkingSpots/Index.cshtml
+++ b/Garage3.0/Garage3.0.Web/Views/ParkingSpots/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Garage3._0.Web.Models.Entities.ParkingSpot>
+﻿@model IEnumerable<Garage3._0.Web.Models.Entities.ParkingSpotEntity>
 
 @{
     ViewData["Title"] = "Index";
@@ -15,9 +15,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.SpotNumber)
             </th>
-            <th>
+            @*<th>
                 @Html.DisplayNameFor(model => model.IsAvailable)
-            </th>
+            </th>*@
             <th></th>
         </tr>
     </thead>
@@ -27,9 +27,9 @@
             <td>
                 @Html.DisplayFor(modelItem => item.SpotNumber)
             </td>
-            <td>
+            @*<td>
                 @Html.DisplayFor(modelItem => item.IsAvailable)
-            </td>
+            </td>*@
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
