Convert text to English for Vehicle Type

--- a/Garage3.0/Garage3.0.Web/Views/Shared/_VehicleTypeInput.cshtml
+++ b/Garage3.0/Garage3.0.Web/Views/Shared/_VehicleTypeInput.cshtml
@@ -3,7 +3,7 @@
 
 <div class="form-group">
     <select class="form-control" name="VehicleTypeId" asp-items="@await service.GetVehicleTypes()">
-        <option selected="selected" value="">Välj typ</option>
+        <option selected="selected" value="">Choose a type</option>
     </select>
 </div>
 
