--- a/Garage3.0/Garage3.0.Web/Views/Members/Index.cshtml
+++ b/Garage3.0/Garage3.0.Web/Views/Members/Index.cshtml
@@ -10,31 +10,28 @@
 	<a asp-action="Create">Register new member</a>
 </p>
 
- @foreach(var member in Model)	
- {
+@foreach  (var member in Model)
+{
+	
+	  <div class="row-cols-4 mb-3 d-grid">
+		<div class="card text-center">
+			<div class="card-header">
+				<h5 class="card-title">@member.Name</h5>
+			</div>
+			<div class="card-body">
+				@*<h5 class="card-title">@member.Name</h5>*@
+				<p class="card-text">This is a registered member. Click below to view details, edit or delete this member.</p>
+			<a asp-action="Edit" asp-route-id="@member.Id">Edit</a>
+			<a asp-action="Details" asp-route-id="@member.Id">Details</a>
+			<a asp-action="Delete" asp-route-id="@member.Id">Delete</a>
+			</div>
+			<div class="card-footer text-muted">
+				E-mail: @member.Email
+			</div>
+		</div>
+	  </div>
 
-<div class="card text-center">
-	<div class="card-header">
-		Member Name
-	</div>
-	<div class="card-body">
-		<h5 class="card-title">@member.Name</h5>
-		<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-			<a asp-action="Edit" asp-route-id="@member.Id">Edit</a> 
-					<a asp-action="Details" asp-route-id="@member.Id">Details</a> 
-					<a asp-action="Delete" asp-route-id="@member.Id">Delete</a>
-	</div>
-	<div class="card-footer text-muted">
-		2 days ago
-	</div>
-</div>
-
- }
-
-
-
-
-
+}
 
 
 <table class="table">
@@ -45,7 +42,7 @@
 			</th>
 			@*<th>
 				@Html.DisplayNameFor(model => model.PersonNr)
-			</th>*@
+					</th>*@
 			<th>
 				@Html.DisplayNameFor(model => model.Email)
 			</th>
@@ -61,7 +58,7 @@
 				</td>
 				@*<td>
 					@Html.DisplayFor(modelItem => item.PersonNr)
-				</td>*@
+						</td>*@
 				<td>
 					@Html.DisplayFor(modelItem => item.Email)
 				</td>
