--- a/Garage3.0/Garage3.0.Web/Views/Vehicles/Details.cshtml
+++ b/Garage3.0/Garage3.0.Web/Views/Vehicles/Details.cshtml
@@ -7,7 +7,7 @@
 <h1>Details</h1>
 
 <div>
-    <h4>VehicleEntity</h4>
+    <h4>Vehicle</h4>
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
