--- a/Garage3.0/Garage3.0.Web/Views/Vehicles/Create.cshtml
+++ b/Garage3.0/Garage3.0.Web/Views/Vehicles/Create.cshtml
@@ -13,7 +13,7 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Member.Id" class="control-label"></label>
+                <label asp-for="Member" class="control-label"></label>
                 <partial name="_MemberInput" for="Member" />
                 @*<input id="memberAutocompelete" type="text" class="form-control" />
                 <input asp- asp-for="MemberId" type="hidden" />*@
