--- a/Garage3.0/Garage3.0.Web/Views/Vehicles/Edit.cshtml
+++ b/Garage3.0/Garage3.0.Web/Views/Vehicles/Edit.cshtml
@@ -14,7 +14,7 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
-                <label asp-for="Member.Id" class="control-label"></label>
+                <label asp-for="Member" class="control-label"></label>
                 <partial name="_MemberInput" for="Member" />
                 @*<input id="memberAutocompelete" type="text" class="form-control" />
                 <input asp- asp-for="MemberId" type="hidden" />*@
