--- a/Garage3.0/Garage3.0.Web/Views/Members/Index.cshtml
+++ b/Garage3.0/Garage3.0.Web/Views/Members/Index.cshtml
@@ -13,7 +13,7 @@
 @foreach  (var member in Model)
 {
 	
-	  <div class="row-cols-1 mb-3 d-inline-flex">
+	  <div class="mb-3 d-inline-flex">
 		<div class="card text-center">
 			<div class="card-header">
 				<h5 class="card-title">@member.Name</h5>
