--- a/Garage3.0/Garage3.0.Web/Views/Shared/_Layout.cshtml
+++ b/Garage3.0/Garage3.0.Web/Views/Shared/_Layout.cshtml
@@ -34,6 +34,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="ParkingSpots" asp-action="Index">Parking Spot</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="ParkingActivities" asp-action="Index">Parking Activity</a>
+                        </li>
                         @*<li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Members" asp-action="Create">Register member</a>
                         </li>*@
