--- a/Garage3.0/Garage3.0.Web/Views/Vehicles/Index.cshtml
+++ b/Garage3.0/Garage3.0.Web/Views/Vehicles/Index.cshtml
@@ -8,6 +8,11 @@
 
 <p>
     <a asp-action="Create">Register vehicle</a>
+    @using(Html.BeginForm("Index", "Vehicles", FormMethod.Get))
+    {
+        <p>Search: @Html.TextBox("SearchString")<br> 
+            <input type="submit" value="filter" /></p>
+    }
 </p>
 <table class="table">
     <thead>
