--- a/Garage3.0/Garage3.0.Web/Views/Home/Index.cshtml
+++ b/Garage3.0/Garage3.0.Web/Views/Home/Index.cshtml
@@ -15,7 +15,7 @@
 			<div class="card-body">
 				<h5 class="card-title">Park</h5>
 				<p class="card-text">If you have an account and at least one registered vehicle you can park.</p>
-				<a href="#" class="btn btn-primary">Go to parking</a>
+				<a href="/ParkingActivities/CheckIn" class="btn btn-primary">Go to parking</a>
 			</div>
 		</div>
 	</div>
