--- a/Garage3.0/Garage3.0.Web/Views/Members/Details.cshtml
+++ b/Garage3.0/Garage3.0.Web/Views/Members/Details.cshtml
@@ -37,6 +37,8 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
-    <a asp-action="Index">To member list</a>
+    <a class="btn btn-primary"  asp-action="Edit" asp-route-id="@Model?.Id">Edit</a>
+    <a class="btn btn-primary"  asp-action="Index">To member list</a>
+    <a class="btn btn-primary" asp-controller="Vehicles" asp-action="Create" asp-route-id="@Model?.Id">Register vehicle</a>
+
 </div>
