--- a/Garage3.0/Garage3.0.Web/Views/Vehicles/Details.cshtml
+++ b/Garage3.0/Garage3.0.Web/Views/Vehicles/Details.cshtml
@@ -49,6 +49,7 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a class="btn btn-primary" asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> 
+    <a class="btn btn-primary" asp-action="Index">Back to List</a> 
+    <a class="btn btn-primary" asp-controller="ParkingActivities" asp-action="CheckIn" asp-route-id="@Model?.Id">Park</a>
 </div>
