--- a/Garage3.0/Garage3.0.Web/Views/Vehicles/Index.cshtml
+++ b/Garage3.0/Garage3.0.Web/Views/Vehicles/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>Vehicles</h1>
 
 <p>
     <a asp-action="Create">Register vehicle</a>
@@ -57,7 +57,7 @@
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a> 
             </td>
         </tr>
 }
