--- a/Garage3.0/Garage3.0.Web/Views/ParkingActivities/CheckIn.cshtml
+++ b/Garage3.0/Garage3.0.Web/Views/ParkingActivities/CheckIn.cshtml
@@ -15,7 +15,7 @@
             <div class="form-group">
                 <label asp-for="ParkingSpot" class="control-label"></label>
                 <partial name="_ParkingSpotInput" for="ParkingSpot" />
-                <span asp-validation-for="ParkingSpot" class="text-danger"></span>
+                <span asp-validation-for="ParkingSpot.Id" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Vehicle" class="control-label"></label>
