--- a/Garage3.0/Garage3.0.Web/Views/Vehicles/Create.cshtml
+++ b/Garage3.0/Garage3.0.Web/Views/Vehicles/Create.cshtml
@@ -22,7 +22,7 @@
             <div class="form-group">
                 <label asp-for="VehicleType" class="control-label"></label>
                 <partial name="_VehicleTypeInput" for="VehicleType" />
-                <span asp-validation-for="VehicleType" class="text-danger"></span>
+                <span asp-validation-for="VehicleType.Id" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="RegNo" class="control-label"></label>
