Remove CheckOut btn for ChekcedOut Vehicles in Parking activity index

--- a/Garage3.0/Garage3.0.Web/Views/ParkingActivities/Index.cshtml
+++ b/Garage3.0/Garage3.0.Web/Views/ParkingActivities/Index.cshtml
@@ -61,7 +61,10 @@
                 @Html.DisplayFor(modelItem => item.ParkingCost)
             </td>
             <td>
-                <a asp-action="CheckOut" asp-route-id="@item.Id">Check Out</a>
+                    @if (!item.CheckOut.HasValue)
+                    {
+                        <a asp-action="CheckOut" asp-route-id="@item.Id">Check Out</a>
+                    }
             </td>
         </tr>
 }
