--- a/Garage3.0/Garage3.0.Web/Views/ParkingActivities/CheckIn.cshtml
+++ b/Garage3.0/Garage3.0.Web/Views/ParkingActivities/CheckIn.cshtml
@@ -19,7 +19,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Vehicle" class="control-label"></label>
-                <partial name="_MemberInput" for="Vehicle" />
+                <partial name="_VehicleInput" for="Vehicle" />
                 <span asp-validation-for="Vehicle.Id" class="text-danger"></span>
             </div>
             @*<div class="form-group">
