View in Vehicles Controller Filter button

--- a/Garage3.0/Garage3.0.Web/Views/Vehicles/Index.cshtml
+++ b/Garage3.0/Garage3.0.Web/Views/Vehicles/Index.cshtml
@@ -11,7 +11,7 @@
     @using(Html.BeginForm("Index", "Vehicles", FormMethod.Get))
     {
         <p>Search: @Html.TextBox("SearchString")<br> 
-            <input type="submit" value="filter" /></p>
+        <input class="btn btn-primary" type="submit" value="filter" /></p>
     }
 </p>
 <table class="table">
