--- a/Garage3.0/Garage3.0.Web/Views/VehicleTypes/Create.cshtml
+++ b/Garage3.0/Garage3.0.Web/Views/VehicleTypes/Create.cshtml
@@ -18,7 +18,7 @@
                 <span asp-validation-for="Title" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <labal asp-for="Wheels" class="control-label"></labal>
+                <label asp-for="Wheels" class="control-label"></label>
                 <input asp-for="Wheels" class="form-control" />
                 <span asp-validation-for="Wheels" class="text-danger"></span>
             </div>
