--- a/Garage3.0/Garage3.0.Web/Views/VehicleTypes/Details.cshtml
+++ b/Garage3.0/Garage3.0.Web/Views/VehicleTypes/Details.cshtml
@@ -16,6 +16,12 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Title)
         </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Wheels)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Wheels)
+        </dd>
     </dl>
 </div>
 <div>
