--- a/Garage3.0/Garage3.0.Web/Views/VehicleTypes/Edit.cshtml
+++ b/Garage3.0/Garage3.0.Web/Views/VehicleTypes/Edit.cshtml
@@ -19,6 +19,11 @@
                 <span asp-validation-for="Title" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="Wheels" class="control-label"></label>
+                <input asp-for="Wheels" class="form-control" />
+                <span asp-validation-for="Wheels" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
